--- a/catalog/core/catalog-core-commons/pom.xml
+++ b/catalog/core/catalog-core-commons/pom.xml
@@ -67,11 +67,13 @@
             <groupId>xalan</groupId>
             <artifactId>serializer</artifactId>
         </dependency>
-        <!-- for SpatialFilter's PrimitiveFactoryImpl class -->
         <dependency>
             <groupId>org.geotools</groupId>
-            <artifactId>gt-jts-wrapper</artifactId>
-            <version>${org.geotools.version}</version>
+            <artifactId>gt-main</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
