--- a/catalog/core/catalog-core-impl/filter-proxy/pom.xml
+++ b/catalog/core/catalog-core-impl/filter-proxy/pom.xml
@@ -40,12 +40,12 @@
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
-            <artifactId>gt-referencing</artifactId>
-            <version>${org.geotools.version}</version>
+            <artifactId>gt-jts-wrapper</artifactId>
+            <version>24.7</version>
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
-            <artifactId>gt-jts-wrapper</artifactId>
+            <artifactId>gt-referencing</artifactId>
             <version>${org.geotools.version}</version>
         </dependency>
         <dependency>
