--- a/catalog/spatial/csw/spatial-csw-endpoint/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-endpoint/pom.xml
@@ -101,11 +101,11 @@
             <artifactId>gt-main</artifactId>
             <version>${org.geotools.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-jts-wrapper</artifactId>
-            <version>${org.geotools.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.geotools</groupId>-->
+<!--            <artifactId>gt-jts-wrapper</artifactId>-->
+<!--            <version>${org.geotools.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-xml</artifactId>
