--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
         <commons-validator.version>1.6</commons-validator.version>
         <components-font-awesome.version>4.7.0</components-font-awesome.version>
         <countryconverter.version>0.1.8</countryconverter.version>
-        <cryptomator.version>1.4.4</cryptomator.version>
+        <cryptomator.version>1.5.2</cryptomator.version>
         <cxf.version>3.5.3</cxf.version>
         <ddf-admin-ui.version>2.25.0</ddf-admin-ui.version>
         <decanter.version>2.9.0</decanter.version>
@@ -202,7 +202,7 @@
         <httpmime.version>${httpclient.version}</httpmime.version>
         <jai-imageio-core.version>1.4.0</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
-        <jackson.version>2.13.3</jackson.version>
+        <jackson.version>2.17.2</jackson.version>
         <jakarta.xml.bind.version>2.3.2</jakarta.xml.bind.version>
         <jakarta.activation.version>1.2.2</jakarta.activation.version>
         <jakarta.mail.version>1.6.6</jakarta.mail.version>
@@ -249,7 +249,7 @@
         <mariadb.version>2.4.1</mariadb.version>
         <maven.failsafe.version>2.22.2</maven.failsafe.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
-        <mime4j.version>0.8.7</mime4j.version>
+        <mime4j.version>0.8.11</mime4j.version>
         <mpegts-streamer.version>0.1.0_2</mpegts-streamer.version>
         <net.minidev.asm.version>1.0.2</net.minidev.asm.version>
         <netty.version>4.1.46.Final</netty.version>
@@ -263,7 +263,7 @@
         <nimbus.content-type.version>2.1</nimbus.content-type.version>
         <nimbus.jose.jwt.version>8.18</nimbus.jose.jwt.version>
         <nimbus.langtag.version>1.4.4</nimbus.langtag.version>
-        <org.geotools.version>24.6</org.geotools.version>
+        <org.geotools.version>28.2</org.geotools.version>
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
         <org.ops4j.pax.swissbox.version>1.8.5</org.ops4j.pax.swissbox.version>
         <org.rrd4j.version>3.3.1</org.rrd4j.version>
@@ -277,10 +277,11 @@
         <pdfbox.version>2.0.23</pdfbox.version>
         <poi.version>5.2.2</poi.version>
         <xlsx.transformer.poi.version>5.2.2</xlsx.transformer.poi.version>
-        <protobuf.version>3.12.4</protobuf.version>
+        <protobuf.version>3.21.12</protobuf.version>
         <quartz.version>2.3.2</quartz.version>
         <require-css.version>0.1.10</require-css.version>
         <sardine.version>5.7</sardine.version>
+<!--        <hazelcast.version>5.1.7</hazelcast.version>-->
         <hazelcast.version>3.12.10</hazelcast.version>
         <saxon.version>9.6.0-4</saxon.version>
         <servicemix.bundles.poi.version>${poi.version}_2</servicemix.bundles.poi.version>
@@ -299,12 +300,12 @@
         <solr.spatial4j.version>0.8</solr.spatial4j.version>
         <spark.version>2.9.2</spark.version>
         <spatial4j.version>0.8</spatial4j.version>
-        <spring.version>5.3.14</spring.version>
+        <spring.version>5.3.19</spring.version>
         <spring-osgi-mock.version>1.2.1</spring-osgi-mock.version>
         <tika.version>1.28.4</tika.version>
         <usng4j.version>0.4</usng4j.version>
         <validation.version>1.1.0.Final</validation.version>
-        <woodstox.core.version>6.2.8</woodstox.core.version>
+        <woodstox.core.version>6.5.1</woodstox.core.version>
         <woodstox.stax2-api.version>4.2.1</woodstox.stax2-api.version>
         <wss4j.neethi.version>3.1.1</wss4j.neethi.version>
         <wss4j.version>2.3.3</wss4j.version>
@@ -316,8 +317,8 @@
         <xmlbeans.version>5.0.3</xmlbeans.version>
         <xmlsec.version>2.3.1</xmlsec.version>
         <xpp3.bundle.version>1.1.4c_6</xpp3.bundle.version>
-        <xstream.bundle.version>1.4.19_1</xstream.bundle.version>
-        <xstream.version>1.4.19</xstream.version>
+        <xstream.bundle.version>1.4.20_1</xstream.bundle.version>
+        <xstream.version>1.4.20</xstream.version>
         <micrometer.version>1.8.0</micrometer.version>
         <micrometer.hdrhistogram.version>2.1.12</micrometer.hdrhistogram.version>
         <micrometer.latencyutils.version>2.0.3</micrometer.latencyutils.version>
@@ -538,11 +539,11 @@
                 <artifactId>gt-cql</artifactId>
                 <version>${org.geotools.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.geotools</groupId>
-                <artifactId>gt-jts-wrapper</artifactId>
-                <version>${org.geotools.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.geotools</groupId>-->
+<!--                <artifactId>gt-jts-wrapper</artifactId>-->
+<!--                <version>${org.geotools.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.geotools</groupId>
                 <artifactId>gt-xml</artifactId>
