working jetty. issues with servlets. believe auth isn't working correctly

--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.web.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.web.cfg
@@ -40,7 +40,10 @@ org.ops4j.pax.web.ssl.truststore.type=${javax.net.ssl.trustStoreType}
 org.ops4j.pax.web.ssl.password=${javax.net.ssl.keyStorePassword}
 
 # Keystore Password
-org.ops4j.pax.web.ssl.keypassword=${javax.net.ssl.keyStorePassword}
+org.ops4j.pax.web.ssl.keystore.password=${javax.net.ssl.keyStorePassword}
+
+# Key Password
+org.ops4j.pax.web.ssl.key.password=${javax.net.ssl.keyStorePassword}
 
 # Truststore Password
 org.ops4j.pax.web.ssl.truststore.password=${javax.net.ssl.trustStorePassword}
