fix bundle wiring

--- a/catalog/spatial/geocoding/spatial-geocoding-websearch/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-websearch/pom.xml
@@ -85,6 +85,10 @@
                             geospatial,
                             asm
                         </Embed-Dependency>
+                        <Import-Package>
+                            !org.noggit*,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
