--- a/catalog/spatial/csw/spatial-csw-connectedsource/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-connectedsource/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>spatial-csw-transformer</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.codice.ddf</groupId>
+            <artifactId>geospatial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-cql</artifactId>
             <version>${org.geotools.version}</version>
@@ -163,7 +168,8 @@
                             catalog-core-api-impl,
                             commons-collections4,
                             ogc-tools-gml-jts,
-                            jaxb2-basics-runtime
+                            jaxb2-basics-runtime,
+                            geospatial
                         </Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                     </instructions>
