--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
         <pax.url.version>2.6.14</pax.url.version>
         <pax.web.version>8.0.27</pax.web.version>
         <restito.version>0.9.4</restito.version>
-        <restassured.version>3.3.0</restassured.version>
+        <restassured.version>5.5.0</restassured.version>
         <groovy.version>4.0.23</groovy.version>
         <xmlunit.version>1.4</xmlunit.version>
         <xmlunit-matchers.version>2.8.2</xmlunit-matchers.version>
@@ -1409,7 +1409,7 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-junit4</artifactId>
-            <version>2.0-M4-groovy-3.0</version>
+            <version>2.3-groovy-4.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
