--- a/platform/security/pom.xml
+++ b/platform/security/pom.xml
@@ -143,7 +143,7 @@
             <dependency>
                 <groupId>xalan</groupId>
                 <artifactId>xalan</artifactId>
-                <version>2.7.2</version>
+                <version>${xalan.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
