--- a/features/utilities/pom.xml
+++ b/features/utilities/pom.xml
@@ -128,7 +128,12 @@
         <!-- BEGIN: Tika dependencies -->
         <dependency>
             <groupId>org.apache.tika</groupId>
-            <artifactId>tika-bundle</artifactId>
+            <artifactId>tika-bundle-standard</artifactId>
+            <version>${tika.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
             <version>${tika.version}</version>
         </dependency>
         <dependency>
