--- a/catalog/transformer/catalog-transformer-video-input/pom.xml
+++ b/catalog/transformer/catalog-transformer-video-input/pom.xml
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>net.sf.saxon</groupId>
