--- a/platform/security/security-oidc-bundle/pom.xml
+++ b/platform/security/security-oidc-bundle/pom.xml
@@ -78,6 +78,11 @@
             <version>${auth0.jwt.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -94,7 +99,7 @@
                         <configuration>
                             <rules>
                                 <ArtifactSizeEnforcerRule implementation="org.codice.maven.artifactsize.ArtifactSizeEnforcerRule">
-                                    <maxArtifactSize>3.4_MB</maxArtifactSize>
+                                    <maxArtifactSize>3.6_MB</maxArtifactSize>
                                 </ArtifactSizeEnforcerRule>
                             </rules>
                         </configuration>
@@ -127,6 +132,7 @@
                             !org.apache.shiro.*,
                             !org.opensaml.*,
                             !org.springframework.security.crypto.password,
+                            !com.nimbusds.jose.shaded.json,
                             *
                         </Import-Package>
                         <Export-Package>
