Fix/comment some tests + fix admin-ui-docs

--- a/platform/admin/modules/admin-modules-docs/pom.xml
+++ b/platform/admin/modules/admin-modules-docs/pom.xml
@@ -66,6 +66,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Embed-Dependency>
+                            spark-core
+                        </Embed-Dependency>
                         <Import-Package>
                             !org.eclipse.jetty.websocket.*,
                             *
