--- a/distribution/test/itests/test-itests-common/pom.xml
+++ b/distribution/test/itests/test-itests-common/pom.xml
@@ -197,10 +197,10 @@
                         <Bundle-Name>${project.name}</Bundle-Name>
                         <Import-Package>
                             org.junit.*,
-                            org.hamcrest.*,
+                            org.hamcrest.*;version=1.3,
                             org.awaitility.*,
                             com.google.common.*,
-                            io.restassured.*,
+                            io.restassured.*;version=3.3.0,
                             org.apache.commons.*;
                             *;resolution:=optional
                         </Import-Package>
