Fix jetty version conflicts

--- a/platform/error/platform-error-page-injector/pom.xml
+++ b/platform/error/platform-error-page-injector/pom.xml
@@ -40,6 +40,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.platform.error</groupId>
