--- a/platform/security/servlet/security-servlet-web-socket-api/pom.xml
+++ b/platform/security/servlet/security-servlet-web-socket-api/pom.xml
@@ -44,12 +44,12 @@
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-servlet</artifactId>
-            <version>9.4.57.v20241219</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-common</artifactId>
-            <version>9.4.57.v20241219</version>
+            <version>${jetty.version}</version>
         </dependency>
     </dependencies>
     <build>
