--- a/platform/admin/core/admin-core-appservice/pom.xml
+++ b/platform/admin/core/admin-core-appservice/pom.xml
@@ -41,6 +41,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-http</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
