--- a/platform/error/platform-error-impl/pom.xml
+++ b/platform/error/platform-error-impl/pom.xml
@@ -48,6 +48,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
