[2.29.x] Upgrade Solr 9.2.1 & Zookeeper 3.8.4 (#6845)
* Upgrade to Solr 9.1

* Upgrade to Solr 9.1.1

* Upgrade zookeeper

* Upgrade to Solr 9.2.1

* Fix jetty version conflicts

* Add the jetty-alpn-java-client bundle to solr feature

---------

Co-authored-by: Phillip Klinefelter <phillip.klinefelter@gmail.com>

--- a/catalog/solr/catalog-solr-commands/pom.xml
+++ b/catalog/solr/catalog-solr-commands/pom.xml
@@ -107,27 +107,17 @@
             <artifactId>solr-test-framework</artifactId>
             <version>${solr.version}</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.eclipse.jetty</groupId>
-                    <artifactId>jetty-server</artifactId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>jetty-servlet</artifactId>
-                    <groupId>org.eclipse.jetty</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>${jetty.version}</version>
+            <version>${solr.jetty.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-            <version>${jetty.version}</version>
+            <version>${solr.jetty.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
